...
		<p class="explain">チェックボックスで表示有無を設定します<br />つまみをドラッグして並び替えることができます</p>

		<hr />

		<p class="midashi">下部メニュー</p>

		<p class="title">ページを保存</p>
		<p class="explain">HTMLや画像を保存します</p>

		<p class="title">NG管理 → NGヘッダー</p>
		<p class="explain">ヘッダーからチェックします<br />題名、おなまえ、ID、IP、NOなど</p>

		<p class="title">NG管理 → NGワード</p>
...
